WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199392
Left and right option key has Unidentified key identifier
https://bugs.webkit.org/show_bug.cgi?id=199392
Summary
Left and right option key has Unidentified key identifier
Daniel Bates
Reported
2019-07-01 19:14:01 PDT
Steps to reproduce: 1. Visit <
https://w3c.github.io/uievents/tools/key-event-viewer.html
>. 2. Focus the text field and press either the left or right Option key (Alt). I see code “Unidentified”. But the the key identifier (“code”) should be AltLeft and AltRight, respectively.
Attachments
For the bots; looking for tests
(769 bytes, patch)
2019-07-01 19:41 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(273.56 KB, patch)
2019-07-02 09:54 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-01 19:15:02 PDT
<
rdar://problem/52497604
>
Daniel Bates
Comment 2
2019-07-01 19:41:52 PDT
Created
attachment 373301
[details]
For the bots; looking for tests
Daniel Bates
Comment 3
2019-07-02 09:54:48 PDT
Created
attachment 373335
[details]
Patch
Daniel Bates
Comment 4
2019-07-02 10:04:12 PDT
Comment on
attachment 373335
[details]
Patch Clearing flags on attachment: 373335 Committed
r247055
: <
https://trac.webkit.org/changeset/247055
>
Daniel Bates
Comment 5
2019-07-02 10:04:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug