Left and right option key has Unidentified key identifier https://bugs.webkit.org/show_bug.cgi?id=199392 <rdar://problem/52497604>

Reviewed by Wenson Hsieh.

Source/WebCore:

Fix up switch case for left Option key and add a case statement for the right Option key.

* platform/ios/PlatformEventFactoryIOS.mm:
(WebCore::codeForKeyEvent):

LayoutTests:

Update test results.

* fast/events/ios/key-events-comprehensive/key-events-control-option-expected.txt:
* fast/events/ios/key-events-comprehensive/key-events-meta-option-expected.txt:
* fast/events/ios/key-events-comprehensive/key-events-option-expected.txt:
* fast/events/ios/key-events-comprehensive/key-events-option-shift-expected.txt:

Canonical link: https://commits.webkit.org/213332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247055 268f45cc-cd09-0410-ab3c-d52691b4dbfc